Fixed workout list's header text alignment

--- a/src/css/exerciseList.css
+++ b/src/css/exerciseList.css
@@ -1,3 +1,10 @@
+.header {
+    font-family: Inter,sans-serif;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+}
+
 .Preference {
     font-family: Inter,sans-serif;
     align-items: center;
